@@ -31,6 +31,7 @@
  - Add GCE datasource [Vaidas Jablonskis]
  - Add native Openstack datasource which reads openstack metadata
    rather than relying on EC2 data in openstack metadata service.
+ - SmartOS: disable running on arm systems due to bug (LP: #1243287)
 0.7.4:
  - fix issue mounting 'ephemeral0' if ephemeral0 was an alias for a
    partitioned block device with target filesystem on ephemeral0.1.
